# novops

./: .dockerignore  .gitignore  .gitlab-ci.yml  .novops.yml  .versionrc  CHANGELOG.md  CONTRIBUTING.md  Cargo.nix  Cargo.toml  Containerfile  Cross.toml  Dockerfile  LICENSE  Makefile  README.md  Taskfile.yml  flake.nix  funding.json  install.sh  package.json  projects.toml  release-please-config.json  standard-version-updater.js
.cursor/rules/: commands.mdc  testing.mdc
.github/: FUNDING.yml
.github/workflows/: build-test.yml  doc-mdbook.yml  doc.yml  flakehub.yml  novops-usage-example.yml  publish-release.yml  release-artifacts.yml  release-please.yml  release-pr.yml  release.yml  tag-release.yml
.well-known/: funding-manifest-urls
docs/: README.md  architecture.md  book.toml  development.md  internals.md  modules.md  novops-direnv.md  schema.json  security.md  usage.md  why-novops.md
docs/schema/: config-schema.json  index.html
docs/src/: SUMMARY.md  cli-reference.md  getting-started.md  install.md  intro.md  security.md  why-novops.md
docs/src/.well-known/: funding-manifest-urls
docs/src/advanced/: README.md  architecture.md  debugging.md  security.md
docs/src/config/: README.md  aws.md  bitwarden.md  config.md  config.schema.json  files-variables.md  google-cloud.md  hashicorp-vault.md  microsoft-azure.md  schema.md  sops.md
docs/src/contributing/: README.md  add-module.md  development.md
docs/src/examples/: README.md  ansible.md  aws-role.md  cli-usage.md  docker.md  hvault-auth.md  nix.md  novops-direnv.md  pulumi.md  shell.md  terraform.md
docs/src/examples/cicd/: README.md  github-action.md  gitlab-ci.md  jenkins.md
docs/src/examples/iac/: README.md  ansible.md  pulumi.md  terraform.md
docs/src/integrate/: README.md  docker.md  github-action.md  gitlab-ci.md  jenkins.md  nix.md  plain-shell.md
docs/src/load/: README.md  aws.md  config-schema.json  google-cloud.md  hashicorp-vault.md  microsoft-azure.md
examples/: .novops.all-modules.yml  .novops.aws_assumerole.yml  .novops.aws_secretsmanager.yml  .novops.aws_ssm.yml  .novops.azure_keyvault.yml  .novops.basic.yml  .novops.gcloud_secretmanager.yml  .novops.hvault_kv1.yml  .novops.hvault_kv2.yml  README.md
hack/: create-release.sh
hack/release/: release-artifacts.sh
release/: pre-commit-changelog.js  release.sh  standard-version-updater-nix.js  standard-version-updater.js
src/: aws.rs  bitwarden.rs  core.rs  files.rs  hashivault.rs  lib.rs  main.rs  novops.rs  resolve.rs  variables.rs
src/modules/: aws.rs  bitwarden.rs  files.rs  hashivault.rs  mod.rs  sops.rs  variables.rs
src/modules/aws/: assume_role.rs  client.rs  config.rs  mod.rs  s3.rs  secretsmanager.rs  ssm.rs
src/modules/azure/: client.rs  mod.rs  vault.rs
src/modules/gcloud/: client.rs  mod.rs  secretmanager.rs
src/modules/hashivault/: aws.rs  client.rs  config.rs  kv1.rs  kv2.rs  mod.rs
tests/: .novops.all-modules.yml  .novops.all.yml  .novops.aws.yml  .novops.aws_assumerole.yml  .novops.aws_assumerole_id_cache_load_timeout.yml  .novops.aws_assumerole_id_cache_load_timeout_short.yml  .novops.aws_s3_object.yml  .novops.aws_secretsmanager.yml  .novops.aws_secretsmanager_var_nonutf8.yml  .novops.aws_ssm.yml  .novops.azure_keyvault.yml  .novops.basic.yml  .novops.empty.yml  .novops.gcloud_secretmanager.yml  .novops.hashivault.yml  .novops.hvault_aws.yml  .novops.hvault_kv1.yml  .novops.hvault_kv2.yml  .novops.multi-env.yml  .novops.plain-strings.yml  .novops.sops.yml  .novops.standalone.yml  .novops.yml  docker-compose.yml  test.rs  test.sh  test_aws.rs  test_azure.rs  test_core.rs  test_format.rs  test_gcloud.rs  test_hvault.rs  test_schema.rs  test_sops.rs  test_utils.rs
tests/authentication/: test-gcp-workload-identity-federation-creds.sh
tests/cli/: test-usage.sh
tests/docker/: Dockerfile
tests/install/: install.sh  test-install-linux.sh  test-install-macos.sh  test-install.sh
tests/manual/: .novops-before.yml  google.sh
tests/nix/: .novops.yml  flake.nix
tests/scripts/: test-docker-prepare.sh  test-docker-teardown.sh
tests/setup/: docker-compose.yml  setup.sh  teardown.sh
tests/setup/aws/: config  credentials
tests/setup/k8s/: .gitkeep
tests/setup/pulumi/: package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
tests/setup/pulumi/.local-backend/: .gitkeep
tests/setup/pulumi/aws/: Pulumi.test.yaml  Pulumi.yaml  index.ts
tests/setup/pulumi/azure/: Pulumi.yaml  index.ts
tests/setup/pulumi/gcp/: Pulumi.yaml  index.ts
tests/setup/pulumi/vault/: Pulumi.test.yaml  Pulumi.yaml  index.ts  jwt_private_key.pem  jwt_public_key.pem
tests/setup/sops/: age1.pub  age2  encrypt.sh  test-dotenv.clear.yml  test-dotenv.encrypted.yml
tests/shells/: .novops.yml  Containerfile.shells  run.sh
tests/sops/: age1  age2.pub  encrypt.sh  test-dotenv.encrypted.yml  test-nested.clear.yml  test-nested.encrypted.yml
tests/test_lib/: mod.rs
