[package]
name = "novops"
version = "0.2.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.8"
enum_dispatch = "0.3.8"
clap = { version = "4.0.18", features = ["derive", "cargo"] }
clap_complete = "*"
xdg = "^2.1"
text_io = "0.1.10"
log = "0.4"
env_logger = "0.10.0"
users = "0.11"
aws-sdk-sts = "0.21.0"
aws-sdk-iam = "0.21.0"
aws-sdk-ssm = "0.21.0"
aws-sdk-secretsmanager = "0.21.0"
aws-config = "0.51.0"
aws-smithy-http = "0.51.0"
aws-smithy-types = "0.51.0"
aws-types = "0.51.0"
azure_core = "0.8.0"
azure_identity = "0.9.0"
azure_security_keyvault = "0.8.0"
time = "0.3.17"
reqwest = "0.11.13"
tracing-subscriber = { version = "0.3.15", features = ["env-filter"] }
tokio = { version = "1", features = ["full"] }
convert_case = "0.5.0"
async-trait = "0.1.56"
anyhow = { version = "1.0", features = ["backtrace"] }
rand = "0.5"
# Use specific revision as kv1 has been merged recently but not yet released (https://github.com/jmgilman/vaultrs/pull/46)
vaultrs = { git = "https://github.com/jmgilman/vaultrs", rev="823c44b898a2990f099cc8737a36a618ae209385" }
url = "2.3.1"
schemars = "0.8.10"
http = "0.2"
google-secretmanager1 = "4.0.1"
base64 = "0.20.0"
crc32c = "0.6"

[dependencies.uuid]
version = "1.1.2"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
