[package]
name = "novops"
version = "0.5.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.8"
enum_dispatch = "0.3.8"
clap = { version = "4.0.18", features = ["derive", "cargo"] }
clap_complete = "*"
xdg = "^2.1"
log = "0.4"
env_logger = "0.10.0"
users = "0.11"
aws-sdk-sts = "0.21.0"
aws-sdk-iam = "0.21.0"
aws-sdk-ssm = "0.21.0"
aws-sdk-secretsmanager = "0.21.0"
aws-config = "0.51.0"
aws-smithy-http = "0.51.0"
aws-smithy-types = "0.51.0"
aws-types = "0.51.0"
azure_core = "0.8.0"
azure_identity = "0.9.0"
azure_security_keyvault = "0.8.0"
time = "0.3.17"
reqwest = "0.11.13"
tracing-subscriber = { version = "0.3.15", features = ["env-filter"] }
tokio = { version = "1", features = ["full"] }
convert_case = "0.5.0"
async-trait = "0.1.68"
anyhow = { version = "1.0", features = ["backtrace"] }
rand = "0.5"
# Use our own version as AWS client is not yet merged in mainstream. See https://github.com/jmgilman/vaultrs/pull/58
vaultrs = { git = "https://github.com/PierreBeucher/vaultrs", rev="aws-se-2023-05-15" }
url = "2.3.1"
schemars = "0.8.10"
http = "0.2"
google-secretmanager1 = "4.0.1"
base64 = "0.20.0"
crc32c = "0.6"
sha2 = "0.10.6"
digest = "0.10.6"
home = "0.5.5"

[dependencies.uuid]
version = "1.1.2"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
