[package]
name = "novops"
version = "0.18.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.8"
clap = { version = "4.0.18", features = ["derive", "cargo", "env"] }
clap_complete = "*"
xdg = "2.1"
log = "0.4"
env_logger = "0.10.0"
users = "0.11"
aws-sdk-sts = "^1"
aws-sdk-iam = "^1"
aws-sdk-ssm = "^1"
aws-sdk-secretsmanager = "^1"
aws-config = "^1"
aws-sdk-s3 = "^1"
aws-smithy-http = "^0"
aws-smithy-types = "^1"
aws-types = "^1"
azure_core = "0.8.0"
azure_identity = "0.9.0"
azure_security_keyvault = "0.8.0"
time = "0.3.17"
reqwest = "0.11.13"
tokio = { version = "1", features = ["full"] }
convert_case = "0.5.0"
async-trait = "0.1.68"
anyhow = { version = "1.0", features = ["backtrace"] }
rand = "0.5"
vaultrs = "=0.7.1"
url = "2.3.1"
schemars = "0.8.10"
http = "0.2"
crc32c = "0.6"
sha2 = "0.10.6"
digest = "0.10.6"
home = "0.5.5"
google-secretmanager1 = "5.0.2"
dialoguer = "0.11.0"
console = "0.15.7"
base64 = "0.22.1"

# Use OpenSSL vendored dependencies on Linux musl
# As somehow musl fails to build from source 
[target.x86_64-unknown-linux-musl.dependencies]
openssl = { version = "0.10.62", features = ["vendored"] }

[target.aarch64-unknown-linux-musl.dependencies]
openssl = { version = "0.10.62", features = ["vendored"] }

[dependencies.uuid]
version = "1.1.2"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

[dev-dependencies]
pretty_assertions = "1.3.0"
tempfile = "3.8.1"
jwt-simple = { version = "^0.12.9", default-features=false, features=["pure-rust"] }
kube = { version = "0.90.0", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.21.1", features = ["latest"] }
pem = "3.0.4"
chrono = "0.4.38"

[profile.test]
incremental = true
opt-level = 0
debug = 1
lto = false
debug-assertions = true
overflow-checks = true
rpath = false
